--- a/PaymentProcessor/ReleaseNotes.txt
+++ b/PaymentProcessor/ReleaseNotes.txt
@@ -1,6 +1,9 @@
 ﻿Release Notes
 --------------------------------------------------------
 Data: 31/01/2016
+- Salvando estudante no db
+--------------------------------------------------------
+Data: 31/01/2016
 - Adicionando referências e modelagem sql server
 --------------------------------------------------------
 Data: 23/01/2016
