--- a/PaymentProcessor/ReleaseNotes.txt
+++ b/PaymentProcessor/ReleaseNotes.txt
@@ -1,5 +1,10 @@
 ﻿Release Notes
 --------------------------------------------------------
+Data 31/01/2016
+- Adicionando ícone
+- Cadastro de aluno não faz mais necessário o cadastro do cartão
+- Cadastro de aluno agora faz edição e busca também
+--------------------------------------------------------
 Data: 31/01/2016
 - Salvando estudante no db
 --------------------------------------------------------
