card class constructors and validators

--- a/PaymentProcessor/ReleaseNotes.txt
+++ b/PaymentProcessor/ReleaseNotes.txt
@@ -1,6 +1,7 @@
 ﻿Release Notes
 --------------------------------------------------------
 - Adicionando NUnit3TestAdapter
+- Construtor e validadores da classe Card
 --------------------------------------------------------
 Data: 07/02/2016
 - Trocando chave primária da tabela Student de CPF para id
