--- a/PaymentProcessor/ReleaseNotes.txt
+++ b/PaymentProcessor/ReleaseNotes.txt
@@ -3,6 +3,7 @@
 - Adicionando NUnit3TestAdapter
 - Construtor e validadores da classe Card
 - Criando primeira versão da classe CardTest
+- Trocando quebra de leituras da trilha de \n para \r para ficar de acordo com a leitora de cartões
 --------------------------------------------------------
 Data: 07/02/2016
 - Trocando chave primária da tabela Student de CPF para id
