--- a/PaymentProcessor/ReleaseNotes.txt
+++ b/PaymentProcessor/ReleaseNotes.txt
@@ -6,6 +6,7 @@
 - Trocando quebra de leituras da trilha de \n para \r para ficar de acordo com a leitora de cartões
 - Garantindo que o PAN obtido contém apenas caracteres numéricos
 - Persistindo a senha com MD5
+- Novo fluxo de troca de senha do estudante
 --------------------------------------------------------
 Data: 07/02/2016
 - Trocando chave primária da tabela Student de CPF para id
